# TEKA

./: CMakeLists.txt  LICENCE.md  README.md  marteau2016.bib
eKats/: CMakeLists.txt  eKats.cpp
octave/: viewAverage.m
src/: CMakeLists.txt  DBA.cpp  DBA.h  DTW.cpp  DTW.h  DistanceL1.cpp  DistanceL1.h  DistanceL2.cpp  DistanceL2.h  GramMatrix.cpp  GramMatrix.h  KDTW.cpp  KDTW.h  Makefile  Point.h  UniformTimeseries.cpp  UniformTimeseries.h  cluster.cpp  cluster.h  cmake_install.cmake  kcentroids.cpp  kcentroids.h  kmedoids.cpp  kmedoids.h  matrix.h  utils.cpp  utils.h
